--- a/AskMeAQuestion/Views/Shared/_NavBar.cshtml
+++ b/AskMeAQuestion/Views/Shared/_NavBar.cshtml
@@ -4,7 +4,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-toggle"></span>
             </button>
-            <span class="navbar-brand" href="#">@Model.DisplayMessage</span>
+            <span class="navbar-brand" style="font-size: small;" href="#">@Model.DisplayMessage</span>
                 <ul class="nav navbar-nav navbar-right">
 
                     <li class="dropdown">
